Fix dark mode

--- a/src/index.css
+++ b/src/index.css
@@ -21,7 +21,7 @@ a {
   text-decoration: inherit;
 }
 a:hover {
-  color: var(--color-red-500);;
+  color: var(--color-red-500);
 }
 
 body {
@@ -56,7 +56,7 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
-@media (prefers-color-scheme: light) {
+/* @media (prefers-color-scheme: light) {
   :root {
     color: #213547;
     background-color: #ffffff;
@@ -67,7 +67,7 @@ button:focus-visible {
   button {
     background-color: #f9f9f9;
   }
-}
+} */
 
 html, body {
   overflow-x: hidden;
